# astra

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  astra.toml  install-binary.sh  install.sh
.claude/: BRANCHING.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  V1_REQUIREMENTS.md
.claude/contracts/: ast.md  diagnostics.md  effects.md
.claude/patterns/: ast-traversal.md  error-handling.md  incremental.md  testing.md
.claude/roles/: architect.md  cli-engineer.md  docs-engineer.md  effects-engineer.md  formatter-engineer.md  parser-engineer.md  runtime-engineer.md  stdlib-engineer.md  testing-engineer.md  typechecker-engineer.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
docs/: IMPLEMENTATION_PLAN.md  effects.md  errors.md  examples.md  formatting.md  getting-started.md  grammar.md  performance.md  spec.md  stability.md  stdlib.md  testing.md  why-astra.md
docs/adr/: ADR-001-implementation-language.md  (+6 more)
examples/: calculator.astra  contracts.astra  deterministic_tests.astra  effects_demo.astra  fibonacci.astra  for_loops.astra  generics.astra  hello.astra  option_handling.astra  result_chaining.astra  string_interp.astra  tail_recursion.astra  text_analyzer.astra  todo_app.astra  traits_and_types.astra  tuples_and_maps.astra  while_loops.astra
src/: cache.rs  cache_tests.rs  lib.rs  main.rs
stdlib/: collections.astra  core.astra  datetime.astra  error.astra  io.astra  iter.astra  json.astra  list.astra  math.astra  option.astra  path.astra  prelude.astra  regex.astra  result.astra  string.astra
tests/: golden.rs
(+85 files in other folders)
