[package]
name = "astra"
version = "0.1.0"
edition = "2021"
description = "Astra programming language - an LLM/Agent-native language"
license = "MIT OR Apache-2.0"
repository = "https://github.com/astra-lang/astra"
readme = "README.md"
keywords = ["programming-language", "compiler", "llm", "agent"]
categories = ["development-tools", "compilers"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "1"
miette = { version = "7", features = ["fancy"] }

# Utilities
unicode-xid = "0.2"
logos = "0.14"

# HTTP client (for Net capability)
ureq = "2"

# File watching (for --watch mode)
notify = "6"

[dev-dependencies]
insta = { version = "1", features = ["json"] }
proptest = "1"
pretty_assertions = "1"
tempfile = "3"

[profile.dev]
# Fast compile times for development
opt-level = 0
debug = true

[profile.release]
# Optimize for speed
opt-level = 3
lto = true
codegen-units = 1

[[bin]]
name = "astra"
path = "src/main.rs"

[lib]
name = "astra"
path = "src/lib.rs"
